--- a/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Desafios/d010/estilo/style.css
+++ b/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Desafios/d010/estilo/style.css
@@ -21,6 +21,11 @@
     --font-android: 'Android', cursive;
 }
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     background-color: var(--cor0);
     font-family: var(--fonte-padrão);
@@ -45,6 +50,9 @@ nav {
 
 main {
     background-color: #FFFFFF;
+    min-width: 300px;
+    margin: auto;
+    max-width: 1000px;
 }
 
 main h1 {
@@ -55,6 +63,10 @@ main h1 {
 main h2 {
      color: var(--cor05);
      font-family: var(--font-android);
+ }
+
+ main img {
+    width: 100%;
  }
 
  footer {
