--- a/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Desafios/d012/style.css
+++ b/pacote-dowloand/Curso em Vídeo - Html5 e CSS/Desafios/d012/style.css
@@ -1,12 +1,15 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
 
 :root {
     --cor-principal: #55ACE6;
     --cor-secundaria: #557EE6;
     --cor-terciaria: #5955E6;
     --cor-fundo: hsl(243, 100%, 90%);
-    --font-destaque: "Passion One", sans-serif;
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: "Passion One", sans-serif;
+    --font3: "Sriracha", cursive;
+    
 }
 
 * {
@@ -17,6 +20,7 @@
 html, body {
     min-height: 100vh;
     background-color: var(--cor-fundo);
+    font-family: var(--font1);
 }
 
 header {
@@ -26,9 +30,9 @@ header {
 }
 
 header > h1 {
-    font-size: 70px;
     padding-top: 50px;
-    font-family: var(--font-destaque);
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -50,6 +54,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 4.5vh;
 }
 
 section.normal {
@@ -66,7 +72,6 @@ section.imagem > p {
     width: 400px;
     background-color:#aedaf9;
 }
-
 
 footer {
     background-color: var(--cor-principal);
